<resources>

    <string name="app_name">Book Me Up!</string>
    
    <!-- My Bookings -->
	<string name="customer_my_bookings_multichoice_cancel">Cancel</string>
	<string name="customer_my_bookings_booking_card_service">"Service: "</string>
	<string name="customer_my_bookings_booking_card_date">"Date: "</string>
	<string name="customer_my_bookings_booking_card_status">"Status: "</string>
	
	<!-- Offers -->
	<string name="customer_offer_list_offer_card_business_name">"Business name: "</string>
	<string name="customer_offer_list_offer_card_discount">"Discount: "</string>
	<string name="customer_offer_list_offer_card_expiration_date">"Expiration date: "</string>
</resources>
