<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bookmeup_widgets_color"
            android:text="@string/customer_offer_list_offer_card_business_name" />

        <TextView
            android:id="@+id/customer_offer_list_offer_card_business_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bookmeup_widgets_color"
            android:text="@string/customer_offer_list_offer_card_discount" />

        <TextView
            android:id="@+id/customer_offer_list_offer_card_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bookmeup_widgets_color"
            android:text="@string/customer_offer_list_offer_card_expiration_date" />

        <TextView
            android:id="@+id/customer_offer_list_offer_card_expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

</TableLayout>